templates/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-data-quality-services/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataQuality
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-quality
    sas.com/admin: namespace
  name: sas-data-quality
spec:
  host: $(INGRESS_HOST)
  path: /dataQuality
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-quality
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-dataQuality
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-quality
    sas.com/admin: namespace
  name: sas-data-quality-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /dataQuality
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-data-quality
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-qkbManagement
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-qkb-management
    sas.com/admin: namespace
  name: sas-qkb-management
spec:
  host: $(INGRESS_HOST)
  path: /qkbManagement
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-qkb-management
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-qkbManagement
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-qkb-management
    sas.com/admin: namespace
  name: sas-qkb-management-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /qkbManagement
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-qkb-management
  wildcardPolicy: Subdomain
